v0.88 12th June 2008:
-=-=-=-=-=-=-=-=-=-=-
T (svnr) description
B (1041) fxendianswap4() wasn't reliable on GCC
B (1062) Unicode string rendering on Windows had magically broken itself again :(

* (1036) Moved v1.4 branch into branches, replaced trunk with v1.6 branch
* (1037) Bumped TnFOX to v0.90
* (1038) Restored FXString::fill() which for some reason Jeroen removed
* (1039) Made QFile much more conservative when asking for permissions when
opening for read access
* (1041) Renamed all fxendianswapX() to fxendianswap() with typed parameter.
This avoids the compiler having to go to memory and thus makes far better
use of registers (which the x86 bswap instruction uses anyway)
* (1044) Bumped TnFOX back to v0.88 for a point release
* (1045) Improved build documentation
* (1046) Replaced Linux implementation of FXProcess::noOfProcessors() with
vastly improved version.
* (1046) Merged FOX v1.6.33
* (1047) Added MSVC9 project files for Windows libraries
* (1048) Merged SQLite v3.5.9
+ (1049) Added MSVC9 third party library binaries for convenience
* (1050) Added a few C++0x features (move constructors, static_assert,
__func__) for compilers which support them
* (1051) Updated build system to set parallel job numbers based on available
CPU cores
+ (1053) Added FXMEMALIGNED() for asking compiler to align variable data
+ (1054) Replaced Maths::Array with a SIMD optimised Maths::Vector plus
added new vector benchmark & test
+ (1055) Replaced Maths::FRandomness with a version written using the new
Maths::Vector code
+ (1059) Rewritten FXFSMonitor to use inotify on Linux instead of FAM
+ (1060) Improved UTF detection via testing for used & unused code planes
* (1065) Converted TnFOXTrans.txt into UTF-8 format and adjusted CppMunge.py
to always read & write in that format
+ (1067) Added automated tool for translating TnFOX translation files via
Google Translation
+ (1068) Replaced TnFOXTrans.txt with Google Translated version and added
that to core DLL
